--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js",
+    "test.routes": "jest ./tests/routes.test.js",
+    "test.logic": "jest ./tests/functions.test.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +22,12 @@
   "bugs": {
     "url": "https://github.com/GSG-G13/aya-ahmad-auto-complete/issues"
   },
-  "homepage": "https://github.com/GSG-G13/aya-ahmad-auto-complete#readme"
+  "homepage": "https://github.com/GSG-G13/aya-ahmad-auto-complete#readme",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "jest": "^29.5.0",
+    "mime-types": "^2.1.35",
+    "nodemon": "^2.0.21",
+    "supertest": "^6.3.3"
+  }
 }
